<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/d_login"
                    android:layout_width="642dp"
                    android:layout_height="959dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_background"
                    android:transitionName="profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.933"
                    tools:alpha="500" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.744"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="195dp"
                    android:layout_height="183dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_batiqu"
                    android:transitionName="profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.038"
                    tools:alpha="500" />

                <com.latihan.capstoneproject.data.customview.EmailActivity
                    android:id="@+id/edt_Email"
                    android:layout_width="275dp"
                    android:layout_height="57dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:translationZ="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.332"
                    tools:alpha="500" />

                <com.latihan.capstoneproject.data.customview.PasswordActivity
                    android:id="@+id/edt_Password"
                    android:layout_width="276dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:translationZ="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.424"
                    tools:alpha="500" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="273dp"
                    android:layout_height="48dp"
                    android:layout_margin="25dp"
                    android:background="@drawable/background_button"
                    android:text="@string/login"
                    android:textColor="@color/beige2"
                    android:translationZ="0dp"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.51"
                    tools:alpha="500" />

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="22dp"
                    android:layout_height="26dp"
                    android:text="@string/or"
                    android:textColor="@color/darkchocolate"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.57"
                    tools:alpha="500" />

                <Button
                    android:id="@+id/btn_create_acc"
                    android:layout_width="273dp"
                    android:layout_height="48dp"
                    android:layout_margin="25dp"
                    android:background="@drawable/background_button2"
                    android:text="@string/create_acc"
                    android:textColor="@color/darkchocolate"
                    android:translationZ="0dp"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.642"
                    tools:alpha="500" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="94dp"
                    android:layout_height="53dp"
                    android:text="@string/login"
                    android:textColor="@color/darkchocolate"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.233"
                    tools:alpha="500" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>