<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_background"
            android:layout_width="765dp"
            android:layout_height="952dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_background"
            android:transitionName="profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:alpha="500" />

        <ImageView
            android:id="@+id/d_result"
            android:layout_width="586dp"
            android:layout_height="635dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/d_result"
            android:transitionName="profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555"
            tools:alpha="500" />

        <TextView
            android:id="@+id/batik_name"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/beige2"
            android:textSize="16sp"
            android:hint="@string/desc_name"
            android:textColorHint="@color/beige2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.447" />

        <TextView
            android:id="@+id/adress_batik"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:hint="@string/adress_batik"
            android:textColor="@color/beige2"
            android:textColorHint="@color/beige2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

        <TextView
            android:id="@+id/description"
            android:layout_width="276dp"
            android:layout_height="256dp"
            android:background="@drawable/background_description"
            android:hint="@string/Descrip"
            android:textColor="@color/greydark"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.749" />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="333dp"
            android:layout_height="219dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.264"
            app:srcCompat="@drawable/ic_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>