<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_background"
            android:layout_width="872dp"
            android:layout_height="974dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_background"
            android:transitionName="profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:alpha="500" />


        <ImageView
            android:id="@+id/ic_result"
            android:layout_width="576dp"
            android:layout_height="577dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_result"
            android:transitionName="profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.602"
            tools:alpha="500" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="63dp"
            android:layout_height="58dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_batiqu"
            android:transitionName="profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:alpha="500" />

        <TextView
            android:id="@+id/tv_Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_text"
            android:textColor="@color/darkchocolate"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172"
            tools:alpha="500" />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="311dp"
            android:layout_height="209dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.327"
            app:srcCompat="@drawable/ic_image" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="119dp"
            android:layout_height="38dp"
            android:layout_margin="25dp"
            android:background="@drawable/background_button"
            android:text="@string/button_camera"
            android:textColor="@color/beige2"
            android:translationZ="0dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.607"
            tools:alpha="500" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="119dp"
            android:layout_height="38dp"
            android:layout_margin="25dp"
            android:background="@drawable/background_button"
            android:text="@string/button_gallery"
            android:textColor="@color/beige2"
            android:translationZ="0dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.606"
            tools:alpha="500" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="145dp"
            android:layout_height="37dp"
            android:layout_margin="25dp"
            android:background="@drawable/background_button"
            android:text="@string/button_scan"
            android:textColor="@color/beige2"
            android:translationZ="0dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.859"
            tools:alpha="500" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>